Correct banner overflowing

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -14,6 +14,7 @@ html {
 	top: 0;
 	left: 0;
 	z-index: 1000;
+	white-space: nowrap;
 }
 
 #body h1 {
